Fix ${PLUGIN_NAME}.enable